@@ -1,2 +1,7 @@
 	; >APCS-32.Common
 
+	GBLL	HAVE_SEEN_APCS32
+HAVE_SEEN_APCS32 SETL {TRUE}
+
+	END
+
