@@ -1,2 +1,11 @@
 	GET	Hdr:<APCS>.Common
 
+	[ HAVE_SEEN_APCS32
+	; Ok, test succeeded
+	|
+	; Test failed
+	TEST FAILED
+	]
+
+	END
+
